# flyllm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: config_file.rs  flyllm.example.toml  metrics.rs  task_routing.rs
monitoring/: README.md  docker-compose.yml  prometheus.yml  start.sh
monitoring/grafana/provisioning/dashboards/: dashboards.yml  flyllm.json
src/: constants.rs  errors.rs  lib.rs
src/config/: loader.rs  mod.rs  types.rs
src/load_balancer/: builder.rs  instances.rs  manager.rs  mod.rs  strategies.rs  tasks.rs  tracker.rs  types.rs  utils.rs
src/metrics/: dashboard.rs  labels.rs  mod.rs  recorder.rs
src/providers/: anthropic.rs  cohere.rs  google.rs  groq.rs  instances.rs  lmstudio.rs  mistral.rs  mod.rs  model_discovery.rs  ollama.rs  openai.rs  perplexity.rs  provider.rs  streaming.rs  togetherai.rs  types.rs
tests/: config_tests.rs  manager_tests.rs  metrics_tests.rs  provider_tests.rs  strategy_tests.rs  task_tests.rs
