[package]
name = "flyllm"
version = "0.2.1"
edition = "2021"
description = "A rust library for unifying LLM backends as an abstraction layer with load balancing."
authors = ["Pablo Rodríguez <rodmarprogrammer@gmail.com>"]
license = "MIT"
repository = "https://github.com/rodmarkun/flyllm"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic", "load-balancing"]

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
json = "0.12.4"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full", "macros"] }
log = "0.4"
env_logger = "0.10"
rand = "0.9.1"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
