[package]
name = "flyllm"
version = "0.4.1"
edition = "2021"
description = "A Rust library for unifying LLM backends as an abstraction layer with load balancing."
authors = ["Pablo Rodríguez <rodmarprogrammer@gmail.com>"]
license = "MIT"
repository = "https://github.com/rodmarkun/flyllm"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic", "load-balancing"]

[features]
default = []
metrics = ["dep:metrics"]
metrics-server = ["metrics", "dep:axum"]

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
json = "0.12.4"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tokio-stream = "0.1"
pin-project-lite = "0.2"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
log = "0.4"
env_logger = "0.10"
rand = "0.9.1"
url = "2.5.4"

# Optional metrics dependencies
metrics = { version = "0.24", optional = true }
axum = { version = "0.8", optional = true, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tempfile = "3"
serde_json = "1.0"
metrics-exporter-prometheus = "0.16"
